# rizin

./: meson.build  meson_options.txt
.github/workflows/: ci.yml
librz/: meson.build
librz/analysis/: meson.build  var.c
librz/asm/: meson.build
librz/bindings/: binder.py  binder_class.py  binder_generic.py  binder_util.py  fragment.py  generate_swig.py  generator.py  header.py  main.py  meson.build  nodes.py
librz/bindings/clang/: cindex.py  cindex.pyi  wrapper.py  wrapper.pyi
librz/core/: canalysis.c  carg.c  casm.c  cbin.c  cconfig.c  cil.c  cmd.c  core.c  csyscall.c  disasm.c  meson.build
librz/core/cmd/: cmd.c  cmd_analysis.c  cmd_magic.c  cmd_print.c  cmd_search.c  cmd_seek.c  cmd_zign.c
librz/core/cmd_descs/: cmd_analysis.yaml  cmd_cmp.yaml  cmd_descs.c  cmd_descs.h  cmd_descs.yaml  meson.build
librz/crypto/p/: crypto_aes.c  crypto_aes_cbc.c
librz/debug/: meson.build
librz/hash/: hash.c
librz/hash/algorithms/md5/: md5.c  md5.h
librz/hash/p/: algo_md5.c
librz/il/: meson.build
librz/include/: rz_analysis.h  rz_asm.h  rz_bin.h  rz_core.h  rz_heap_glibc.h  rz_reg.h  rz_search.h  rz_type.h  rz_types.h
librz/include/rz_util/: rz_str.h
librz/io/: meson.build
librz/main/: rz-find.c
librz/search/: search.c
librz/signature/: meson.build  zignature.c
librz/util/: list.c  meson.build  print.c  str.c
test/db/formats/elf/: elf-relarm
test/unit/: test_str.c
